# OpenRath

./: .env.example  .gitignore  CHANGELOG.md  README.md  README_zh.md  pyproject.toml
docs/: README.md  site_decisions.md
docs/design/: backend.md
docs/source/: conf.py  index.md  install.md
docs/source/developer_notes/: agent_param.md  (+3 more)
example/: _demo_echo_server.py  custom_tool_usage.py  mcp_tool_usage.py  sandbox_backend_local.py  sandbox_backend_opensandbox.py  single_agent.py
example/engineering_agents/: README.md
example/research_transformer/: README.md  main.py  prompts.py  providers.py  workflow.py
example/trading_agents/: README.md
src/rath/: __init__.py
tests/: conftest.py  test_import.py
tests/backends/: test_local.py  test_opensandbox.py
tests/conformance/: conftest.py  test_cancellation.py  test_code_run.py  test_command_run.py  test_concurrency.py  test_files.py  test_lifecycle.py
tests/example/: test_research_transformer_cli.py
tests/flow/: test_mcp_adapter.py  test_tool_decorator.py  test_workflow_agent.py
tests/integration/: test_session_compress_real.py  test_session_loop_real.py
tests/llm/: conftest.py  test_openai_chat_real.py
tests/session/: scripted_loop_executor.py  test_llm_message_wire.py  test_run_session_loop_edges.py  test_run_session_loop_local.py  test_session_sandbox_behavior.py  test_token_budget.py  test_tool_table.py
tests/unit/: test_calls.py  test_capabilities.py  test_errors.py  test_opensandbox_bind_fallback.py  test_opensandbox_workspace_volume.py  test_registry.py  test_results.py  test_retry.py
(+73 files in other folders)
