[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openrath"
version = "0.0.0"
description = "A opensource, torch-like api framework for dynamic multi-agent workflow."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/rath"]
